# tedo-python

./: .gitignore  README.md  pyproject.toml  setup.py
src/: index.ts
src/sales/: index.ts  types.ts
tedo/: __init__.py  billing.py  client.py  errors.py  models.py  pagination.py  projects.py
tests/: test_projects.py
