[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tedo"
version = "0.3.0"
description = "Official Python SDK for the Tedo API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Tedo" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24,<1"]

[project.optional-dependencies]
dev = [
    "mypy>=1.7",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["tedo*"]

[tool.setuptools.package-data]
tedo = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["tedo", "tests"]
